lib/gks/gks.pp


  procedure gks_inq_operating_state(opsta : Plongint); cdecl; external 'GKS';
  procedure gks_inq_level(var errind, lev : longint); cdecl; external 'GKS';
  procedure gks_inq_wstype(
    n : longint; var errind, number, wtype : longint) cdecl; external 'GKS';
  procedure gks_inq_max_xform(var errind, maxtnr : longint);
    cdecl; external 'GKS';
  procedure gks_inq_open_ws(
    n : longint; var errind, ol, wkid : longint); cdecl; external 'GKS';
  procedure gks_inq_active_ws(
    n : longint; var errind, ol, wkid : longint); cdecl; external 'GKS';
  procedure gks_inq_segn_ws(
    wkid : longint; n : longint; var errind, ol, segn : longint);
    cdecl; external 'GKS';
  procedure gks_inq_pline_linetype(var errind, ltype : longint);
    cdecl; external 'GKS';
  procedure gks_inq_pline_linewidth(var errind : longint; var lwidth : double);
    cdecl; external 'GKS';
  procedure gks_inq_pline_color_index(var errind, coli : longint);
    cdecl; external 'GKS';
  procedure gks_inq_pmark_type(var errind, mtype : longint);
    cdecl; external 'GKS';
  procedure gks_inq_pmark_size(var errind : longint; var mszsc : double);
    cdecl; external 'GKS';
  procedure gks_inq_pmark_color_index(var errind, coli : longint);
    cdecl; external 'GKS';
  procedure gks_inq_text_fontprec(var errind, font, prec : longint);
    cdecl; external 'GKS';
  procedure gks_inq_text_expfac(var errind : longint; var chxp : double);
    cdecl; external 'GKS';
  procedure gks_inq_text_spacing(var errind : longint; var chsp : double);
    cdecl; external 'GKS';
  procedure gks_inq_text_color_index(var errind, coli : longint);
    cdecl; external 'GKS';
  procedure gks_inq_text_height(var errind : longint; var chh : double);
    cdecl; external 'GKS';
  procedure gks_inq_text_upvec(var errind : longint; var chux, chuy : double);
    cdecl; external 'GKS';
  procedure gks_inq_text_path(var errind, txp : longint); cdecl; external 'GKS';
  procedure gks_inq_text_align(var errind, txalh, txalv : longint);
    cdecl; external 'GKS';
  procedure gks_inq_fill_int_style(var errind, ints : longint);
    cdecl; external 'GKS';
  procedure gks_inq_fill_style_index(var errind, styli : longint);
    cdecl; external 'GKS';
  procedure gks_inq_fill_color_index(var errind, coli : longint);
    cdecl; external 'GKS';
  procedure gks_inq_open_segn(var errind, segn : longint);
    cdecl; external 'GKS';
  procedure gks_inq_current_xformno(var errind, tnr : longint);
    cdecl; external 'GKS';
  procedure gks_inq_xform(
    tnr : longint; var errind : longint; var wn, vp : array of double);
    cdecl; external 'GKS';
  procedure gks_inq_clip(
    var errind, clsw : longint; var clrt : array of double);
    cdecl; external 'GKS';
  procedure gks_inq_ws_conntype(
    wkid : longint; var errind, conid, wtype : longint); cdecl; external 'GKS';
  procedure gks_inq_ws_category(
    wkid : longint; var errind, wscat : longint); cdecl; external 'GKS';
  procedure gks_inq_text_extent(
    wkid : longint; px, py : double; str : ansistring; var errind : longint;
    var cpx, cpy : double; var tx, ty : array of double); cdecl; external 'GKS';
  procedure gks_inq_max_ds_size(
    wtype : longint; var errind, dcunit : longint; var rx, ry : double;
    var lx, ly : longint); cdecl; external 'GKS';

  procedure gks_emergency_close; cdecl; external 'GKS';

  procedure gks_set_text_slant(slant : double); cdecl; external 'GKS';
  procedure gks_draw_image(
    x, y, scalex, scaley : double; width, height : longint; data : Plongint);
    cdecl; external 'GKS';
  procedure gks_set_shadow(offsetx, offsety, blur : double);
    cdecl; external 'GKS';
  procedure gks_set_transparency(alpha : double); cdecl; external 'GKS';
  procedure gks_set_coord_xform(mat : Pdouble); cdecl; external 'GKS';

  procedure gks_begin_selection(index, kind : longint); cdecl; external 'GKS';
  procedure gks_end_selection; cdecl; external 'GKS';
  procedure gks_move_selection(x : double; y : double); cdecl; external 'GKS';
  procedure gks_resize_selection(
    kind : longint; x : double; y : double); cdecl; external 'GKS';

  procedure gks_inq_text_slant(var errind : longint; var slant : double); cdecl;
    external 'GKS';

implementation

end.
